The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:


Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: Jon Riehl (http://jonriehl.com/)
Date: 2010/02/11
Description:

Applied patch for building on more recent NetBSD's.  See bug #39 in the
tracker:

http://smlnj-gforge.cs.uchicago.edu/tracker/index.php?func=detail&aid=39&group_id=33&atid=215

----------------------------------------------------------------------
Name: Jon Riehl (http://jonriehl.com/)
Date: 2010/02/02
Description:

Cutting version 110.72.  New bootfiles.

----------------------------------------------------------------------
Name John Reppy (http://cs.uchicago.edu/~jhr)
Date 2009/12/20
Description:

Fixed performance bugs in List module by making @ and foldr be
tail recursive.

----------------------------------------------------------------------
Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
Date: 2009/12/11
Description:

Fixed the Win32 unable to print long strings bug.
----------------------------------------------------------------------
Name: Lars Bergstrom (larsberg@cs.uchicago.edu)
Date: 2009/12/10
Description:

Fixed an overrun during major GC. If the string arena was nearly full, it was possible
for alignment padding added during copy to the to-space to overrun the allocated
size.
----------------------------------------------------------------------
Name John Reppy (http://cs.uchicago.edu/~jhr)
Date 2009/11/18
Description:

The ml-antlr and ml-ulex programs have been ported to build under
mlton.

----------------------------------------------------------------------
Name John Reppy (http://cs.uchicago.edu/~jhr)
Date 2009/11/17
Description:

Added %header directive to the ml-ulex scanner generator.  Also